separated data into cities.js, added popups at the cities that display the population and circlemarkers proportional to the population of this cities/200000 using the marker.bindPopup() method

--- a/Rutgers_Data_Science/Mapping_Earthquakes/MappingSinglePoints/index.html
+++ b/Rutgers_Data_Science/Mapping_Earthquakes/MappingSinglePoints/index.html
@@ -20,6 +20,8 @@
     <!--this holds our map-->
     <div id="mapid"></div>
 
+    <!-- Our city data-->
+    <script src="static/js/cities.js"></script> 
     <!-- Our API key and script -->
     <script src="static/js/config.js"></script>
     <script src="static/js/logic.js"></script>
