--- a/Rutgers_Data_Science/Mapping_Earthquakes/MappingGeoJSONPoints/index.html
+++ b/Rutgers_Data_Science/Mapping_Earthquakes/MappingGeoJSONPoints/index.html
@@ -10,6 +10,9 @@
     integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
     crossorigin=""/>
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
+
+    <!-- D3.json needed for parsing majorAirports.json-->
+    <script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
 <body>
     <!-- Make sure you put this AFTER Leaflet's CSS -->
